# design-patterns

./: CMakeLists.txt  README.md  vcpkg.json
abstract-factory/: CMakeLists.txt
abstract-factory/src/: main.cpp
adapter/: CMakeLists.txt
adapter/include/: adapter.h
adapter/src/: adapter.cpp  main.cpp
bridge/: CMakeLists.txt
bridge/include/: bike.h  bridge.h  bus.h  car.h  electric_engine.h  gas_engine.h  hybrid_engine.h  truck.h
bridge/src/: bridge.cpp  main.cpp
builder/: CMakeLists.txt
builder/src/: main.cpp
command/: CMakeLists.txt
composite/: CMakeLists.txt
composite/src/: main.cpp
decorator/: CMakeLists.txt
decorator/src/: main.cpp
design-patterns/: CMakeLists.txt
design-patterns/src/: main.cpp
facade/: CMakeLists.txt
facade/src/: main.cpp
factory/: CMakeLists.txt
flyweight/: CMakeLists.txt
flyweight/src/: main.cpp
interpreter/: CMakeLists.txt
iterator/: CMakeLists.txt
mediator/: CMakeLists.txt
memento/: CMakeLists.txt
null-object/: CMakeLists.txt
observer/: CMakeLists.txt
prototype/: CMakeLists.txt
proxy/: CMakeLists.txt
proxy/src/: main.cpp
res/: config.cmake  config.h.in
singleton/: CMakeLists.txt
state/: CMakeLists.txt
strategy/: CMakeLists.txt
template/: CMakeLists.txt
visitor/: CMakeLists.txt
