#Auto Generated Root CMake file by aura CLI
#Copyright(c) 2025 None.All rights reerved.
cmake_minimum_required(VERSION 3.6...3.31)
project(design-patterns VERSION 1.0.0 LANGUAGES CXX)
include(res/config.cmake)
#@add_find_package Warning: Do not remove this line
#@add_subproject Warning: Do not remove this line
add_subdirectory(decorator)
add_subdirectory(composite)
add_subdirectory(bridge)
add_subdirectory(design-patterns)
add_subdirectory(adapter)
