#Auto Generated Root CMake file by aura CLI
#Copyright(c) 2025 None.All rights reerved.
cmake_minimum_required(VERSION 3.6...3.31)
project(design-patterns VERSION 1.0.0 LANGUAGES CXX)
include(res/config.cmake)
#@add_find_package Warning: Do not remove this line
#@add_subproject Warning: Do not remove this line
add_subdirectory(null-object)
add_subdirectory(memento)
add_subdirectory(iterator)
add_subdirectory(visitor)
add_subdirectory(template)
add_subdirectory(strategy)
add_subdirectory(state)
add_subdirectory(interpreter)
add_subdirectory(observer)
add_subdirectory(mediator)
add_subdirectory(command)
add_subdirectory(abstract-factory)
add_subdirectory(prototype)
add_subdirectory(builder)
add_subdirectory(factory)
add_subdirectory(singleton)
add_subdirectory(proxy)
add_subdirectory(flyweight)
add_subdirectory(facade)
add_subdirectory(decorator)
add_subdirectory(composite)
add_subdirectory(bridge)
add_subdirectory(design-patterns)
add_subdirectory(adapter)
